cluster/apps/web/portfolio/prod/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfolio
spec:
  podSelector:
    matchLabels:
      app: portfolio
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-haproxy
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - haproxy-ingress
      ports:
        - protocol: TCP
          port: 8085
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values:
                  - kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: service-mesh
          podSelector:
            matchExpressions:
              - key: linkerd.io/control-plane-component
                operator: In
                values:
                  - destination
                  - identity
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8086
        - protocol: TCP
          port: 8090
